Istio-Deployments/Sticky-Sessions/03-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sticky-svc
spec:
  hosts:
    - '*'
  gateways:
    - http-murali-rest-gateway
  http:
    - match:
        - uri:
            prefix: /ping
      route:
      - destination:
          host: sticky-svc.default.svc.cluster.local
          port:
            number: 8080
