Istio-Deployments/Sticky-Sessions/04-DestinationRule_Sticky_session.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: sticky-svc
spec:
    host: sticky-svc.default.svc.cluster.local
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpHeaderName: x-user   #httpCookie. First request goes to a unknown pod and subsequest request goes to same pod
